Updated nick's page with email address and admin asssistant.  Fixed Clathrin spacing.

--- a/assets/less/clathrin.less
+++ b/assets/less/clathrin.less
@@ -1,5 +1,5 @@
 .content-margins{
-	margin-top: 100px;
+	margin-top: 80px;
 }
 
 .image1{
